# FinancialPlanning---Copy

./: .gitignore  README.md  STREAMLIT_MIGRATION_PLAN.md  TEMPLATE_DRIVEN_MIGRATION_COMPLETE.md  analyze_all_scenarios.py  config.py  constants.py  currency_cache.json  financial_planner_pydantic.py  financial_planner_template_driven.py  pyproject.toml  requirements.txt  scenarios.json  show_scenario_details.py  streamlit_app.py  test_all_scenarios.py  test_performance_optimizations.py  test_unified_model.py
components/: scenario_selector.py  utils.py
config/: README.md  __init__.py  housing_config.yaml  salary_templates.yaml  tax_config.yaml  template_engine.py  yaml_loader.py
config/constants/: defaults.yaml
config/markets/locations/: uk.yaml
config/scenarios/: README.md  dubai_local_home.yaml  dubai_tech_graduate.yaml  dubai_uk_home.yaml  new_york_uk_home.yaml  seattle_local_home.yaml  seattle_tech_graduate.yaml  seattle_uk_home.yaml  seattle_year4_local_home.yaml  seattle_year4_uk_home.yaml  seattle_year5_local_home.yaml  seattle_year5_uk_home.yaml  uk_scenario_a.yaml  uk_scenario_b.yaml
config/scenarios/examples/: array_override_demo.yaml  simple_array_override.yaml  uk_conservative_v3.yaml
config/schema/: scenario.schema.yaml
config/tax_systems/: README.md  tax_free.yaml  uk_income_tax_ni.yaml  us_federal.yaml
config/tax_systems/us_states/: california.yaml  new_york.yaml  texas.yaml  washington.yaml
config/templates/expense_profiles/: graduate.yaml
config/templates/housing_strategies/: uae_local_home_purchase.yaml  uk_home_purchase.yaml  us_local_home_purchase.yaml
config/templates/investment_strategies/: balanced.yaml
config/templates/life_events/: children.yaml  education.yaml  marriage.yaml
config/templates/salary_progressions/: conservative.yaml  override_examples.yaml  tech_senior.yaml  tech_worker.yaml
docs/: ASSUMPTIONS_ANALYSIS.md  CONFIG_RESTRUCTURE_PLAN.md  UNIFIED_DATA_MODEL_ARCHITECTURE.md
models/: __init__.py  financial_data.py  performance_optimizations.py  scenario_builder.py  unified_financial_data.py  unified_helpers.py
pages/: 1_Time_Series_Analysis.py  2_Income_Expense_Breakdown.py  3_Performance_Monitoring.py
static/css/: README.md  main.css
utils/: __init__.py  charts.py  common.py  css_loader.py  data.py  formatting.py  performance.py  scenario_helpers.py  uae_tax.py  uk_tax.py  us_tax.py  validation.py
utils/tax/: __init__.py  tax_utils.py  uk_tax.py
